--- a/paginas/SetDePosavasos.html
+++ b/paginas/SetDePosavasos.html
@@ -16,14 +16,14 @@
     <header>
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand"><img src="/imagenes/Logo2.jpg" alt="logoCalden" class="img-fluid logoTamano"></a>
+                <a class="navbar-brand"><img src="../imagenes/Logo2.jpg" alt="logoCalden" class="img-fluid logoTamano"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link colorLetraNavbar" aria-current="page" href="/index.html">Inicio</a>
+                            <a class="nav-link colorLetraNavbar" aria-current="page" href="index.html">Inicio</a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link colorLetraNavbar" aria-current="page" href="QuienesSomos.html">Quienes somos</a>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 estilos">
                         <div class="card">         
-                            <img src="/imagenes/SetPosavasos3.jpg" class="card-img-top" alt="...">
+                            <img src="../imagenes/SetPosavasos3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">                    
                                 <p class="card-text">Set de posavasos</p>
                                 <a href="https://www.whatsapp.com/catalog/5492216022679" class="btn">Comprar</a>                
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 estilos">
                         <div class="card">         
-                            <img src="/imagenes/SetPosavasos4.jpg" class="card-img-top" alt="...">
+                            <img src="../imagenes/SetPosavasos4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">                    
                                 <p class="card-text">Set de posavasos</p>
                                 <a href="https://www.whatsapp.com/catalog/5492216022679" class="btn">Comprar</a>                
@@ -112,7 +112,7 @@
             <div class="container-fluid estilosFooter">
                 <div class="row p-5 d-flex align-items-center justify-content-center">
                     <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                        <a><img src="/imagenes/Logo.jpg" class="logoFooter rounded-circle"></a>
+                        <a><img src="../imagenes/Logo.jpg" class="logoFooter rounded-circle"></a>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
                         <h6 class="tituloFooter1">RRSS</h6>
@@ -129,9 +129,9 @@
                     <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
                         <h6 class="tituloFooter1">Medios de pago</h6>
                         <div class="contenedorLogosPagoFooter">
-                            <img src="/imagenes/logo_cuenta_dni.jpg" class="logoPagos">
-                            <img src="/imagenes/logoVisa.png" class="logoPagos">
-                            <img src="/imagenes/logoNativa.png" class="logoPagos">
+                            <img src="../imagenes/logo_cuenta_dni.jpg" class="logoPagos">
+                            <img src="../imagenes/logoVisa.png" class="logoPagos">
+                            <img src="../imagenes/logoNativa.png" class="logoPagos">
                         </div>  
                     </div>
                 </div>
