--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-              <a class="navbar-brand"><img src="./imagenes/Logo2.jpg" alt="logoCalden" class="img-fluid logoTamano"></a>
+              <a class="navbar-brand"><img src="imagenes/Logo2.jpg" alt="logoCalden" class="img-fluid logoTamano"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,31 +22,31 @@
                     <a class="nav-link colorLetraNavbar" aria-current="page" href="index.html">Inicio</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link colorLetraNavbar" aria-current="page" href="/paginas/QuienesSomos.html">Quienes somos</a>
+                    <a class="nav-link colorLetraNavbar" aria-current="page" href="paginas/QuienesSomos.html">Quienes somos</a>
                   </li>              
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle colorLetraNavbar" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Productos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item colorLetraNavbar" href="/paginas/Macetas.html">Macetas</a></li>
+                      <li><a class="dropdown-item colorLetraNavbar" href="paginas/Macetas.html">Macetas</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item colorLetraNavbar" href="/paginas/SetDeBano.html">Sets de baño</a></li>
+                      <li><a class="dropdown-item colorLetraNavbar" href="paginas/SetDeBano.html">Sets de baño</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item colorLetraNavbar" href="/paginas/SetDePosavasos.html">Sets de posavasos</a></li>
+                      <li><a class="dropdown-item colorLetraNavbar" href="paginas/SetDePosavasos.html">Sets de posavasos</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item colorLetraNavbar" href="/paginas/Terrazo.html">Terrazo</a></li>
+                      <li><a class="dropdown-item colorLetraNavbar" href="paginas/Terrazo.html">Terrazo</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item colorLetraNavbar" href="/paginas/BanquitosDeHormigon.html">Banquitos de hormigon</a></li>
+                      <li><a class="dropdown-item colorLetraNavbar" href="Paginas/BanquitosDeHormigon.html">Banquitos de hormigon</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item colorLetraNavbar" href="/paginas/PortaVelas.html">Porta velas</a></li>
+                      <li><a class="dropdown-item colorLetraNavbar" href="paginas/PortaVelas.html">Porta velas</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link colorLetraNavbar" aria-current="page" href="/paginas/Ferias.html">Ferias</a>
+                      <a class="nav-link colorLetraNavbar" aria-current="page" href="paginas/Ferias.html">Ferias</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link colorLetraNavbar" aria-current="page" href="/paginas/Contacto.html">Contacto</a>
+                      <a class="nav-link colorLetraNavbar" aria-current="page" href="paginas/Contacto.html">Contacto</a>
                   </li>                            
                 </ul>
                 <form class="d-flex" role="search">
@@ -66,13 +66,13 @@
           </div>
           <div class="carousel-inner carousel-container">
             <div class="carousel-item active">
-              <img src="./imagenes/Carousel1.jpg" class="d-block w-100" alt="Maceta1">
+              <img src="imagenes/Carousel1.jpg" class="d-block w-100" alt="Maceta1">
             </div>
             <div class="carousel-item">
-              <img src="./imagenes/Carousel2.jpg" class="d-block w-100" alt="Maceta2">
+              <img src="imagenes/Carousel2.jpg" class="d-block w-100" alt="Maceta2">
             </div>
             <div class="carousel-item">
-              <img src="./imagenes/Carousel3.jpg" class="d-block w-100" alt="Maceta3">
+              <img src="imagenes/Carousel3.jpg" class="d-block w-100" alt="Maceta3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -89,7 +89,7 @@
       <div class="container-fluid estilosFooter">
         <div class="row p-5 d-flex align-items-center justify-content-center">
           <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-            <a><img src="./imagenes/Logo.jpg" class="logoFooter rounded-circle"></a>
+            <a><img src="imagenes/Logo.jpg" class="logoFooter rounded-circle"></a>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
             <h6 class="tituloFooter1">RRSS</h6>
@@ -107,9 +107,9 @@
           <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
             <h6 class="tituloFooter1">Medios de pago</h6>
             <div class="contenedorLogosPagoFooter">
-              <img src="./imagenes/logo_cuenta_dni.jpg" class="logoPagos">
-              <img src="./imagenes/logoVisa.png" class="logoPagos">
-              <img src="./imagenes/logoNativa.png" class="logoPagos">
+              <img src="imagenes/logo_cuenta_dni.jpg" class="logoPagos">
+              <img src="imagenes/logoVisa.png" class="logoPagos">
+              <img src="imagenes/logoNativa.png" class="logoPagos">
             </div>  
           </div>
         </div>
