mailto en ferias y contacto corregido

--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
                     <h6 class="tituloFooter1">Contacto</h6>
-                    <a href="#" class="text-decoration-none"><i class="bi bi-envelope-at iconoRedes"></i></i></a>
+                    <a href="mailto:caldenmacetas@gmail.com" class="text-decoration-none"><i class="bi bi-envelope-at iconoRedes"></i></i></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
                     <h6 class="tituloFooter1">Medios de pago</h6>
