--- a/paginas/Ferias.html
+++ b/paginas/Ferias.html
@@ -19,7 +19,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link colorLetraNavbar" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link colorLetraNavbar" aria-current="page" href="../index.html">Inicio</a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link colorLetraNavbar" aria-current="page" href="QuienesSomos.html">Quienes somos</a>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
                     <h6 class="tituloFooter1">Contacto</h6>
-                    <a href="#" class="text-decoration-none"><i class="bi bi-envelope-at iconoRedes"></i></i></a>
+                    <a href="mailto:caldenmacetas@gmail.com" class="text-decoration-none"><i class="bi bi-envelope-at iconoRedes"></i></i></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center contenedorFooter">
                     <h6 class="tituloFooter1">Medios de pago</h6>
