Corrección tamaño de íconos responsive, background en carousel index y resize text area en contacto

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
             </div>
         </nav>    
     </header>
-    <main>
+    <main class="main__Index">
+      <div class="main__Index-a">
+
+      </div>
       <div id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,6 +86,9 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+      </div>
+      <div class="main__Index-c">
+
       </div>
     </main>
     <footer id="footer">
