--- a/paginas/Ferias.html
+++ b/paginas/Ferias.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ferias en las que participó Calden macetas">
+    <meta name="keywords" content="ferias, la plata, lisandro olmos, ferias de la plata, hecho a mano, macetas, suculentas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="../css/estilos.css">
@@ -64,17 +66,37 @@
             </div>
             <div class="row pt-3 pb-3 ps-3 pe-3 ferias__fondo">
                 <div class="col-sm-12 col-md-6 estilos pb-3">
-                    <a><img src="../imagenes/Feria1.jpg" class="img-fluid" alt="ImagenFerias"></a>
+                    <figure class="imghvr-hinge-up">                        
+                        <img src="../imagenes/Feria1.jpg" class="img-fluid" alt="ImagenFerias">
+                        <figcaption>
+                            <p>Feria en el Barrio, Laurus cervecería, La Plata, 2023</p>
+                        </figcaption>
+                    </figure>
                 </div>
                 
                 <div class="col-sm-12 col-md-6 estilos pb-3">
-                    <a><img src="../imagenes/Feria2.jpg" class="img-fluid" alt="ImagenFerias"></a>
+                    <figure class="imghvr-hinge-up">                        
+                        <img src="../imagenes/Feria2.jpg" class="img-fluid" alt="ImagenFerias">
+                        <figcaption>
+                            <p>Feria en la plaza del barrio Gigante del Oeste, Lisandro Olmos, La Plata, 2023</p>
+                        </figcaption>
+                    </figure>
                 </div>
                 <div class="col-sm-12 col-md-6 estilos">
-                    <a><img src="../imagenes/Feria3.jpg" class="img-fluid ferias__foto3" alt="ImagenFerias"></a>
+                    <figure class="imghvr-hinge-up">                        
+                        <img src="../imagenes/Feria3.jpg" class="img-fluid" alt="ImagenFerias">
+                        <figcaption>
+                            <p>Feria en Cocinarte,Lisandro Olmos, La Plata, 2022</p>
+                        </figcaption>
+                    </figure>
                 </div>
                 <div class="col-sm-12 col-md-6 estilos">
-                    <a><img src="../imagenes/Feria4.jpg" class="img-fluid" alt="ImagenFerias"></a>
+                    <figure class="imghvr-hinge-up">                        
+                        <img src="../imagenes/Feria4.jpg" class="img-fluid" alt="ImagenFerias">
+                        <figcaption>
+                            <p>Feria en Cocinarte,Lisandro Olmos, La Plata, 2022</p>
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
