Tamaño iconos responsive, background de inicio, resize none en contacto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Macetas de cemento, suculentas y objetos de decoración en concreto">
+    <meta name="keywords" content="macetas, suculentas, regalos, hecho a mano, plantas, cemento, deco en cemento, deco en concreto, terrazo, posavasos, porta velas, banquitos">
+    <title>Calden macetas de cemento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
@@ -59,8 +61,11 @@
     </header>
     <main class="main__Index">
       <div class="main__Index-a">
-
+        
       </div>
+      <div class="main__Index-b">     
+      </div>
+
       <div id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -87,7 +92,7 @@
             <span class="visually-hidden">Next</span>
           </button>
       </div>
-      <div class="main__Index-c">
+      <div class="main__Index-d">
 
       </div>
     </main>
